First committed change to text body

--- a/git_text.html
+++ b/git_text.html
@@ -1,6 +1,7 @@
 <HTML><HEAD>My Test Git page</HEAD><BODY>
 
 <H1>Welcome to my test Git application</H1>
-This is my test Git application page. Please enjoy.
+This is my test Git application page. Please enjoy.<BR>
+I am making change...
 </BODY>
 </HTML>
