--- a/git_text.html
+++ b/git_text.html
@@ -2,6 +2,6 @@
 
 <H1>Welcome to my test Git application</H1>
 This is my test Git application page. Please enjoy.<BR>
-I am making change number 4.
+I am making change number 5 for Colin.
 </BODY>
 </HTML>
