Correct currency format

--- a/details.html
+++ b/details.html
@@ -117,7 +117,7 @@ close();
               Include :<span class="blue"> TVA</span><br />
               Description :<span class="blue"> Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. </span><br />
             </div>
-            <div class="prod_price_big"><span class="reduce">350$</span> <span class="price">270$</span></div>
+            <div class="prod_price_big"><span class="reduce">$350</span> <span class="price">$270</span></div>
             <a href="#" class="prod_buy">add to cart</a> <a href="#" class="prod_compare">compare</a> </div>
         </div>
       </div>
