--- a/index.html
+++ b/index.html
@@ -132,7 +132,7 @@
         <div class="center_prod_box">
           <div class="product_title"><a href="#">Makita 156 MX-VL</a></div>
           <div class="product_img"><a href="#"><img src="images/p7.jpg" alt="" border="0" /></a></div>
-          <div class="prod_price"><span class="reduce">350$</span> <span class="price">270$</span></div>
+          <div class="prod_price"><span class="reduce">$350</span> <span class="price">270$</span></div>
         </div>
         <div class="prod_details_tab"> <a href="#" class="prod_buy">Add to Cart</a> <a href="#" class="prod_details">Details</a> </div>
       </div>
